--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "typescript": "^5.2.2",
     "unplugin-icons": "0.17.4",
     "unplugin-vue-components": "^0.27.4",
-    "vite-plugin-yaml2": "^1.1.5"
+    "@yaml-js/vite": "^0.2.0"
   },
   "engines": {
     "node": ">= 18",
