--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@quasar/extras": "^1.16.15",
     "@tauri-apps/api": "^2.2.0",
     "@vueuse/core": "^12.4.0",
+    "axios": "^1.7.9",
     "blurhash": "^2.0.5",
     "comlink": "^4.4.2",
     "hls.js": "^1.5.19",
