--- a/.github/workflows/mobile.yaml
+++ b/.github/workflows/mobile.yaml
@@ -95,15 +95,13 @@ jobs:
           releaseDraft: true
           prerelease: false
           mobile: ${{ matrix.android || matrix.ios }}
-          includeRelease: ${{ !(matrix.ios || matrix.android) }}
-          includeDebug: ${{ matrix.ios || matrix.android || false }}
           args: ${{ matrix.args }}
 
       - name: Modify AndroidManifest
         if: matrix.android
         run: |
-          java -jar ManifestEditor-2.0.jar -aa "android-usesCleartextTraffic:true" src-tauri/gen/android/app/build/outputs/apk/universal/debug/app-universal-debug-unsigned.apk
-          java -jar uber-apk-signer-1.3.0.jar -apks  src-tauri/gen/android/app/build/outputs/apk/universal/debug/app-universal-debug-unsigned-unsigned.apk
+          java -jar ManifestEditor-2.0.jar -aa "android-usesCleartextTraffic:true" src-tauri/gen/android/app/build/outputs/apk/universal/release/app-universal-release-unsigned.apk
+          java -jar uber-apk-signer-1.3.0.jar -apks  src-tauri/gen/android/app/build/outputs/apk/universal/release/app-universal-release-unsigned-unsigned.apk
 
       - name: Get Node project version
         if: matrix.android
@@ -113,19 +111,13 @@ jobs:
       - name: Rename APK file
         if: matrix.android
         run: |
-          mv ./src-tauri/gen/android/app/build/outputs/apk/universal/debug/app-universal-debug-aligned-debugSigned.apk ./src-tauri/gen/android/app/build/outputs/apk/universal/debug/Jellyfin.Segment.Editor_${{ steps.package-version.outputs.current-version}}_${{ matrix.arch }}.apk
+          mv ./src-tauri/gen/android/app/build/outputs/apk/universal/release/app-universal-release-aligned-debugSigned.apk ./src-tauri/gen/android/app/build/outputs/apk/universal/release/Jellyfin.Segment.Editor_${{ steps.package-version.outputs.current-version}}_${{ matrix.arch }}.apk
 
-      - name: Publish Android
-        if: matrix.android
-        uses: softprops/action-gh-release@v2.2.1
+      - uses: actions/upload-artifact@v4
         with:
-          draft: true
           name: Jellyfin Segment Editor ${{ steps.package-version.outputs.current-version}}
-          tag_name: ${{ github.ref_name }}
-          generate_release_notes: false
-          files: src-tauri/gen/android/app/build/outputs/apk/universal/debug/Jellyfin.Segment.Editor_*.apk
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          path: src-tauri/gen/android/app/build/outputs/apk/universal/release/Jellyfin.Segment.Editor_*.apk
+          retention-days: 1
 
   rerun-failed-jobs:
     runs-on: ubuntu-latest
