--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,31 +1,29 @@
 {
-    "name": "Jellyfin SegmentEditor",
-    "dockerComposeFile": "compose.yaml",
-    "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
-    "service": "app",
-    "features": {
-        "rust": {
-            "version": "latest",
-            "profile": "default"
-        }
-    },
-    "postCreateCommand": {
-        "npm": "npm i && npm i -g @quasar/cli"
-    },
-    "forwardPorts": [
-        3111
-    ],
-    "customizations": {
-        "vscode": {
-            "extensions": [
-                "dbaeumer.vscode-eslint",
-                "esbenp.prettier-vscode",
-                "editorconfig.editorconfig",
-                "vue.volar",
-                "wayou.vscode-todo-highlight",
-                "lokalise.i18n-ally",
-                "pflannery.vscode-versionlens"
-            ]
-        }
+  "name": "Jellyfin SegmentEditor",
+  "dockerComposeFile": "compose.yaml",
+  "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
+  "service": "app",
+  "features": {
+    "rust": {
+      "version": "latest",
+      "profile": "default"
     }
+  },
+  "postCreateCommand": {
+    "npm": "npm i && npm i -g @quasar/cli"
+  },
+  "forwardPorts": [3111],
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "dbaeumer.vscode-eslint",
+        "esbenp.prettier-vscode",
+        "editorconfig.editorconfig",
+        "vue.volar",
+        "wayou.vscode-todo-highlight",
+        "lokalise.i18n-ally",
+        "pflannery.vscode-versionlens"
+      ]
+    }
+  }
 }
