--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -173,6 +173,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Docker meta
+        uses: docker/metadata-action@v5
+        id: meta
+        with:
+          images: |
+            ghcr.io/intro-skipper/jellyfin-se
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+
       - name: Login Registry
         uses: docker/login-action@v1
         with:
@@ -187,5 +198,5 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           platforms: linux/amd64,linux/arm64
-          tags: ghcr.io/intro-skipper/jellyfin-se:latest
+          tags: ${{ steps.meta.outputs.tags }}
           push: true
