--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@jellyfin/sdk": "^0.0.0-unstable.202508141352",
+    "@jellyfin/sdk": "^0.12.0",
     "@quasar/extras": "^1.16.17",
     "@tauri-apps/api": "^2.3.0",
     "@vueuse/core": "^13.0.0",
