--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,7 @@ serde_json = "^1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "2.9.0", features = [] }
 tauri-plugin-window-state = { version = "^2" }
+tauri-plugin-devtools = "2.0.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
